// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiScreenReaderOnly adds an accessibility class to a child element and combines other classNames (foo, bar) given as props on the child 1`] = `
<p
  class="ouiScreenReaderOnly foo bar"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`OuiScreenReaderOnly adds an accessibility class to a child element when used with no props 1`] = `
<p
  class="ouiScreenReaderOnly"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`OuiScreenReaderOnly will show on focus 1`] = `
<a
  class="ouiScreenReaderOnly--showOnFocus"
  href="#"
>
  Link
</a>
`;
